--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".view.MainActivity">
+    tools:context=".menu.ui.MainActivity">
 
     <TextView
         android:id="@+id/nameTextView"
