--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.OptionsActivity">
+    tools:context=".menu.ui.OptionsActivity">
 
     <Button
         android:id="@+id/exitButton"
