--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,18 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FFFF0000</color>
+
+    // For All Theme
+    <color name="branding">#FF5986F2</color>
+    <color name="onBranding">#FFFCFCFC</color>
+
+    // For Light Theme
+    <color name="white_900">#FFEAEAEA</color>
+    <color name="black_800">#BABABF</color>
+
+
+    // For Dark Theme
+
+    <color name="black_900">#FF404040</color>
+    <color name="white_800">#FFA6A6A6</color>
 </resources>
