--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -2,11 +2,13 @@
 <resources>
 
     <style name="text">
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:textAlignment">center</item>
     </style>
 
     <style name="button" parent="@style/Widget.Material3.Button">
-        <item name="android:textSize">18sp</item>
+        <item name="elevation">4dp</item>
+        <item name="cornerRadius">24dp</item>
+        <item name="android:textSize">14sp</item>
     </style>
 </resources>
