--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -90,11 +90,12 @@
 
     <TextView
         android:id="@+id/breathTextView"
+        style="@style/text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/text"
         android:text=""
         android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/newGameButton"
         app:layout_constraintTop_toBottomOf="@+id/infoBreathTextView" />
 
