--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,6 +15,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/new_game_game_button"
+        android:ellipsize="end"
+        android:maxLines="1"
+        app:layout_constraintHorizontal_weight="1.4"
         app:layout_constraintEnd_toStartOf="@id/pauseButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +28,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/buttonPadding"
-        android:text="@string/pause_game_button"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="@string/resume_game_button"
+        app:layout_constraintHorizontal_weight="1.4"
         app:layout_constraintEnd_toStartOf="@id/exitButton"
         app:layout_constraintStart_toEndOf="@+id/newGameButton"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,6 +42,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/exit_game_button"
+        android:ellipsize="end"
+        android:maxLines="1"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pauseButton"
         app:layout_constraintTop_toTopOf="parent" />
@@ -112,6 +121,9 @@
         android:layout_height="0dp"
         android:layout_marginEnd="@dimen/buttonPadding"
         android:text="@string/left_game_button"
+        android:ellipsize="end"
+        android:maxLines="1"
+        app:layout_constraintHorizontal_weight="1.2"
         app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/downButton"
@@ -125,6 +137,9 @@
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/buttonPadding"
         android:text="@string/right_game_button"
+        android:ellipsize="end"
+        android:maxLines="1"
+        app:layout_constraintHorizontal_weight="1.2"
         app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
         app:iconGravity="end"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -140,6 +155,9 @@
         android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
         android:padding="0dp"
         android:text="@string/down_game_button"
+        android:ellipsize="end"
+        android:maxLines="1"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/rightButton"
         app:layout_constraintStart_toEndOf="@+id/leftButton" />
@@ -153,6 +171,8 @@
         android:drawableTop="@drawable/ic_baseline_rotate_right_24"
         android:padding="0dp"
         android:text="@string/rotate_game_button"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/downButton"
         app:layout_constraintEnd_toEndOf="@+id/downButton"
         app:layout_constraintStart_toStartOf="@+id/downButton" />
